support change inset

--- a/SwiftLineChart/Main.storyboard
+++ b/SwiftLineChart/Main.storyboard
@@ -23,6 +23,11 @@
                                     <constraint firstAttribute="height" constant="300" id="BmX-Hj-TNK"/>
                                     <constraint firstAttribute="width" constant="300" id="iUj-VS-wU9"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="chartInset">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Wt-yg-YMb">
                                 <rect key="frame" x="270" y="472" width="60" height="30"/>
